fix: 修改一些文本显示

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -109,7 +109,7 @@ const nextPost =
         <span>Back to Top</span>
       </button>
 
-      <ShareLinks />
+      <!-- <ShareLinks /> -->
     </div>
 
     <hr class="my-6 border-dashed" />
@@ -138,7 +138,7 @@ const nextPost =
               <path d="M15 6l-6 6l6 6" />
             </svg>
             <div>
-              <span>Previous Post</span>
+              <span>上一篇文章</span>
               <div class="text-sm text-skin-accent/85">{prevPost.title}</div>
             </div>
           </a>
@@ -151,7 +151,7 @@ const nextPost =
             class="flex w-full justify-end gap-1 text-right hover:opacity-75 sm:col-start-2"
           >
             <div>
-              <span>Next Post</span>
+              <span>下一篇文章</span>
               <div class="text-sm text-skin-accent/85">{nextPost.title}</div>
             </div>
             <svg
