--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Youxi</h1>
+      <h1>Jingz</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -41,10 +41,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         <span class="sr-only">RSS Feed</span>
       </a>
 
-      <p>
-        哈喽，这是自 2024年 11 月份我的服务器到期后，我使用 AstroPaper
-        模板做的一个新的 blog 网站。
-      </p>
+      <p>我于2020年开始接触前端，热爱编码，对代码有洁癖，喜欢接触前沿技术。</p>
       {
         // only display if at least one social link is enabled
         socialCount > 0 && (
