--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,7 +18,9 @@ const { noMarginTop = false } = Astro.props;
     <div class="copyright-wrapper">
       <span>Copyright &#169; {currentYear}</span>
       <span class="separator">&nbsp;|&nbsp;</span>
-      <span>蜀ICP备2021014633号</span>
+      <a href="https://beian.miit.gov.cn/" target="_blank"
+        >蜀ICP备2021014633号</a
+      >
     </div>
   </div>
 </footer>
